--- a/index.html
+++ b/index.html
@@ -1,36 +1,39 @@
-<html>
-  <head>
-    <title>Build-a-Burger</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="ingredients.css">
-  </head>
-  <body>
-    
-    <h1>The Best Burger</h1>
-    <h2>Only $9.99</h2>
+<!doctype html>
+<html lang="en">
+    <head>
+        <meta charset="UTF-8" />
+        <title>Build-a-Burger</title>
+        <link rel="stylesheet" href="style.css" />
+        <link rel="stylesheet" href="ingredients.css" />
+    </head>
+    <body>
+        <h1>The Best Burger</h1>
 
-    <!-- 
-    Rearrange the elements below to make your own custom burger. 
-    Change ingredient colors in the "ingredients.css" file.
-    -->
-    
-    <div class="burger">
-      <div class="bun-top"></div>
-      <div class="cheese"></div>
-      <div class="tomato"></div>
-      <div class="cheese"></div>
-      <div class="cheese"></div>
-      <div class="cheese"></div>
-      <div class="onion"></div>
-      <div class="meatball"></div>
-      <div class="meatball"></div>
-      <div class="meatball"></div>
-      <div class="pickle"></div>
-      <div class="patty"></div>
-      <div class="patty"></div>
-      <div class="bun-bottom"></div>
-      <div class="plate"></div>
-    </div>
-  
-  </body>
+        <h2>Classic Supreme - $9.99</h2>
+        <div class="burger">
+            <div class="bun-top"></div>
+            <div class="tomato"></div>
+            <div class="cheese"></div>
+            <div class="patty"></div>
+            <div class="pickle"></div>
+            <div class="onion"></div>
+            <div class="bun-bottom"></div>
+            <div class="plate"></div>
+        </div>
+
+        <hr />
+
+        <h2>Veggie Delight - $8.99</h2>
+        <div class="burger">
+            <div class="bun-top"></div>
+            <div class="cheese"></div>
+            <div class="tomato"></div>
+            <div class="lettuce"></div>
+            <div class="pickle"></div>
+            <div class="onion"></div>
+            <div class="veggie-patty"></div>
+            <div class="bun-bottom"></div>
+            <div class="plate"></div>
+        </div>
+    </body>
 </html>
